deps: bump node dependencies 🌲

--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "singleQuote": true
   },
   "dependencies": {
-    "@tanstack/react-table": "^8.20.6",
+    "@tanstack/react-query": "^5.75.1",
+    "@tanstack/react-table": "^8.21.3",
     "bootstrap": "^3.4.1",
     "clsx": "^2.1.1",
-    "downshift": "^9.0.8",
-    "esri-leaflet": "^3.0.14",
-    "firebase": "^11.2.0",
+    "downshift": "^9.0.9",
+    "esri-leaflet": "^3.0.16",
+    "firebase": "^11.6.1",
     "immer": "^10.1.1",
+    "ky": "^1.8.1",
     "leaflet": "^1.9.4",
     "leaflet-loading": "^0.1.24",
     "localforage": "^1.10.0",
@@ -40,46 +42,46 @@
     "proj4leaflet": "^1.0.2",
     "prop-types": "^15.8.1",
     "pubsub-js": "^1.9.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-error-boundary": "^5.0.0",
     "react-leaflet": "^5.0.0",
-    "react-toastify": "^11.0.3",
+    "react-toastify": "^11.0.5",
     "spin.js": "^4.1.2",
     "use-immer": "^0.11.0",
-    "uuid": "^11.0.5"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.4",
-    "@eslint/compat": "^1.2.5",
-    "@eslint/eslintrc": "^3.2.0",
-    "@eslint/js": "^9.19.0",
-    "@playwright/test": "^1.50.0",
-    "@storybook/addon-actions": "^8.5.2",
-    "@storybook/addon-essentials": "^8.5.2",
-    "@storybook/addon-links": "^8.5.2",
+    "@chromatic-com/storybook": "^3.2.6",
+    "@eslint/compat": "^1.2.9",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.25.1",
+    "@playwright/test": "^1.52.0",
+    "@storybook/addon-actions": "^8.6.12",
+    "@storybook/addon-essentials": "^8.6.12",
+    "@storybook/addon-links": "^8.6.12",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^8.5.2",
-    "@storybook/react-vite": "^8.5.2",
-    "@types/node": "^22.12.0",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@storybook/react": "^8.6.12",
+    "@storybook/react-vite": "^8.6.12",
+    "@types/node": "^22.15.3",
+    "@vitejs/plugin-react": "^4.4.1",
     "concurrently": "^9.1.2",
     "dotenv-cli": "^8.0.0",
-    "esbuild": "^0.24.2",
-    "eslint": "^9.19.0",
-    "eslint-config-prettier": "^10.0.1",
+    "esbuild": "^0.25.3",
+    "eslint": "^9.25.1",
+    "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-testing-library": "^7.1.1",
-    "firebase-tools": "^13.29.2",
-    "globals": "^15.14.0",
-    "prettier": "^3.4.2",
-    "sass": "^1.83.4",
-    "storybook": "^8.5.2",
-    "vite": "^6.0.11",
-    "vitest": "^3.0.4",
-    "wait-on": "^8.0.2"
+    "firebase-tools": "^14.2.2",
+    "globals": "^16.0.0",
+    "prettier": "^3.5.3",
+    "sass": "^1.87.0",
+    "storybook": "^8.6.12",
+    "vite": "^6.3.4",
+    "vitest": "^3.1.2",
+    "wait-on": "^8.0.3"
   }
 }
