--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "electrofishing",
   "version": "2.4.9",
+  "type": "module",
   "scripts": {
     "build:stage": "export VITE_BUILD=stage && pnpm run build:sw && vite build",
     "build:sw": "esbuild src/ServiceWorker.js --bundle --outfile=public/ServiceWorker.js --define:process.env.VITE_FIREBASE_CONFIG=$(npx dotenv -p VITE_FIREBASE_CONFIG)",
@@ -53,9 +54,6 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.6",
-    "@eslint/compat": "^1.2.9",
-    "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^9.25.1",
     "@playwright/test": "^1.52.0",
     "@storybook/addon-actions": "^8.6.12",
     "@storybook/addon-essentials": "^8.6.12",
@@ -64,17 +62,12 @@
     "@storybook/react": "^8.6.12",
     "@storybook/react-vite": "^8.6.12",
     "@types/node": "^22.15.3",
+    "@ugrc/eslint-config": "^1.2.1",
     "@vitejs/plugin-react": "^4.4.1",
     "concurrently": "^9.1.2",
     "dotenv-cli": "^8.0.0",
     "esbuild": "^0.25.3",
     "eslint": "^9.25.1",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.6",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-testing-library": "^7.1.1",
     "firebase-tools": "^14.2.2",
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
