--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build:sw": "esbuild src/ServiceWorker.js --bundle --outfile=public/ServiceWorker.js --define:process.env.VITE_FIREBASE_CONFIG=$(npx dotenv -p VITE_FIREBASE_CONFIG)",
     "build": "export VITE_BUILD=prod && pnpm run build:sw && vite build",
     "e2e": "playwright test",
+    "format": "prettier --write .",
     "lint": "eslint .",
     "preview": "vite preview",
     "start:app": "pnpm run build:sw && vite",
