--- a/package.json
+++ b/package.json
@@ -54,14 +54,11 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.6",
+    "@chromatic-com/storybook": "^4.0.1",
     "@playwright/test": "^1.52.0",
-    "@storybook/addon-actions": "^8.6.12",
-    "@storybook/addon-essentials": "^8.6.12",
-    "@storybook/addon-links": "^8.6.12",
+    "@storybook/addon-links": "^9.0.18",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^8.6.12",
-    "@storybook/react-vite": "^8.6.12",
+    "@storybook/react-vite": "^9.0.18",
     "@types/node": "^22.15.17",
     "@ugrc/eslint-config": "^1.2.1",
     "@vitejs/plugin-react": "^4.4.1",
@@ -73,9 +70,11 @@
     "globals": "^16.1.0",
     "prettier": "^3.5.3",
     "sass": "^1.87.0",
-    "storybook": "^8.6.12",
+    "storybook": "^9.0.18",
     "vite": "^6.3.5",
     "vitest": "^3.1.3",
-    "wait-on": "^8.0.3"
+    "wait-on": "^8.0.3",
+    "eslint-plugin-storybook": "9.0.18",
+    "@storybook/addon-docs": "^9.0.18"
   }
 }
