--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,8 +1,15 @@
 packages:
   - functions
+
 onlyBuiltDependencies:
   - '@firebase/util'
   - '@parcel/watcher'
   - esbuild
   - protobufjs
   - re2
+
+overrides:
+  glob@>=10.2.0 <10.5.0: '>=10.5.0'
+  js-yaml@<3.14.2: '>=3.14.2'
+  js-yaml@>=4.0.0 <4.1.1: '>=4.1.1'
+  tmp@<=0.2.3: '>=0.2.4'
