--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,7 @@ updates:
   - package-ecosystem: npm
     directory: /
     schedule:
-      interval: monthly
+      interval: quarterly
     groups:
       safe-app-dependencies:
         update-types:
@@ -25,7 +25,7 @@ updates:
   - package-ecosystem: npm
     directory: /functions
     schedule:
-      interval: monthly
+      interval: quarterly
     groups:
       safe-function-dependencies:
         update-types:
@@ -47,7 +47,7 @@ updates:
   - package-ecosystem: github-actions
     directory: /
     schedule:
-      interval: monthly
+      interval: quarterly
     groups:
       ci-dependencies:
         dependency-type: production
