--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
   "cSpell.words": [
+    "agrc",
+    "arcgisinput",
+    "arcgissystem",
     "autodocs",
     "autogen",
     "autoheight",
@@ -12,10 +15,12 @@
     "clrk",
     "Combobox",
     "comobobox",
+    "cooldown",
     "coord",
     "DATABASESCHEMA",
     "deps",
     "dijkstras",
+    "Electrofishing",
     "ellps",
     "esbuild",
     "firestore",
@@ -63,6 +68,7 @@
     "TMPL",
     "toastify",
     "UDWR",
+    "ugrc",
     "unproject",
     "utahid",
     "VITE",
